@@ -1,0 +1,4 @@
+#!/usr/bin/perl
+use lib 't/lib';
+use TestFor::Code::TidyAll::Plugin::GenericTransformer;
+TestFor::Code::TidyAll::Plugin::GenericTransformer->runtests;
